--- a/BlurEffect/Base.lproj/Main.storyboard
+++ b/BlurEffect/Base.lproj/Main.storyboard
@@ -116,6 +116,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="19.921875" y="23.4375"/>
         </scene>
     </scenes>
     <resources>
